--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,7 @@
     <div class="container" ng-controller="AlbumsIndexController as albumsIndexCtrl">
       <input type="text" class="form-control" placeholder="New album name" ng-model="albumsIndexCtrl.newAlbum.name">
       <input type="text" class="form-control" placeholder="New album artist" ng-model="albumsIndexCtrl.newAlbum.artistName">
+      <input type="text" class="form-control" placeholder="Add genres" ng-model="albumsIndexCtrl.newAlbum.genres">
       <p><b>albumsIndexCtrl.newAlbum:</b> {{albumsIndexCtrl.newAlbum}}</p>
       <input type="text" class="form-control" ng-model="searchText" placeholder="Search Albums">
       <div ng-repeat="album in albumsIndexCtrl.albums | orderBy: 'name' | filter: searchText" class="row">
@@ -59,6 +60,12 @@
                       <h4 class="inline-header">Artist Name:</h4>
                       <span>{{album.artistName}}</span>
                     </li>
+
+                    <li class="list-group-item">
+                      <h4 class="inline-header">Genres:</h4>
+                      <span>{{album.genres}}</span>
+                    </li>
+
                   </ul>
                 </div>
               </div>
