--- a/views/index.html
+++ b/views/index.html
@@ -32,9 +32,12 @@
         means that the controller's alias within the HTML will be
         albumsIndexCtrl-->
     <div class="container" ng-controller="AlbumsIndexController as albumsIndexCtrl">
-      <input type="text" class="form-control" placeholder="New album name" ng-model="albumsIndexCtrl.newAlbum.name">
-      <input type="text" class="form-control" placeholder="New album artist" ng-model="albumsIndexCtrl.newAlbum.artistName">
-      <input type="text" class="form-control" placeholder="Add genres" ng-model="albumsIndexCtrl.newAlbum.genres">
+      <form ng-submit-"AlbumsIndexCtrl.createAlbum()">
+        <input type="text" class="form-control" placeholder="New album name" ng-model="albumsIndexCtrl.newAlbum.name">
+        <input type="text" class="form-control" placeholder="New album artist" ng-model="albumsIndexCtrl.newAlbum.artistName">
+        <!-- <input type="text" class="form-control" placeholder="Add genres" ng-model="albumsIndexCtrl.newAlbum.genres"> -->
+        <input type="submit"></input>
+      </form>
       <p><b>albumsIndexCtrl.newAlbum:</b> {{albumsIndexCtrl.newAlbum}}</p>
       <input type="text" class="form-control" ng-model="searchText" placeholder="Search Albums">
       <div ng-repeat="album in albumsIndexCtrl.albums | orderBy: 'name' | filter: searchText" class="row">
