--- a/views/index.html
+++ b/views/index.html
@@ -93,6 +93,8 @@
 
             <!-- begin album internal row -->
               <div class="row">
+                <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
+                <button class='btn btn-info' ng-hide="editing" ng-click="editing = true">Edit Album</button>
                 <div class="col-md-3 col-xs-12 thumbnail">
                   <img src="images/800x800.png" alt="album image">
                 </div>
