--- a/views/index.html
+++ b/views/index.html
@@ -95,6 +95,9 @@
               <div class="row">
                 <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
                 <button class='btn btn-info' ng-hide="editing" ng-click="editing = true">Edit Album</button>
+                <button class='btn btn-success' ng-show="editing" ng-click="albumsIndexCtrl.editAlbum(album); editing = false">Save Changes</button>
+                <input ng-show="editing" ng-model="album.name" type="text" class="form-control input-md">
+                <input ng-show="editing" ng-model="album.artistName" type="text" class="form-control input-md">
                 <div class="col-md-3 col-xs-12 thumbnail">
                   <img src="images/800x800.png" alt="album image">
                 </div>
