--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Welcome to tunely</h1>
-        <p>Your music binder!</p>
+        <p>Your music binder</p>
       </div>
     </div>
 
