--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,7 @@
 
     <!-- APPLICATION SCRIPTS -->
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/controllers/AlbumsIndexController.js"></script>
 
   </head>
   <body>
