--- a/views/templates/albums.html
+++ b/views/templates/albums.html
@@ -87,7 +87,7 @@
 
                 <li class="list-group-item">
                   <h4 class="inline-header">Songs:</h4>
-                  <span ng-repeat="song in album.songs">&ndash; ({{song.trackNumber}}) {{song.name}} &ndash;</span>
+                  <p ng-repeat="song in album.songs"> ({{song.trackNumber}}) {{song.name}} </p>
                 </li>
               </ul>
             </div>
