adds working add song path

--- a/views/templates/albums-show.html
+++ b/views/templates/albums-show.html
@@ -46,10 +46,10 @@
                 <div class="col-md-8">
                   <div class="form-group">
                     <div class="col-md-4">
-                      <input ng-model="albumsShowCtrl.addSong.trackNumber" type="number" class="form-control input-md" placeholder="Song Number">
-                      <input ng-model="albumsShowCtrl.addSong.songName" type="text" class="form-control input-md" placeholder="Song Name">
+                      <input ng-model="albumsShowCtrl.newSong.trackNumber" type="number" class="form-control input-md" placeholder="Song Number">
+                      <input ng-model="albumsShowCtrl.newSong.name" type="text" class="form-control input-md" placeholder="Song Name">
                     </div>
-                    <button type="button" class="btn btn-info" ng-click="albumsShowCtrl.createSong()">Add Track</button>
+                    <button type="button" class="btn btn-info" ng-click="albumsShowCtrl.addSong()">Add Song</button>
                   </div>
                 </div>
               </form>
